--- a/Moo68k/Moo68k.csproj
+++ b/Moo68k/Moo68k.csproj
@@ -40,6 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MC86000.cs" />
+    <Compile Include="MemoryModule.cs" />
+    <Compile Include="Moo68kTools.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
